# sparse-voxel-octree-renderer

./: CMakeLists.txt  Engine.cpp  Engine.h  Initializers.cpp  Initializers.h  Mesh.cpp  Mesh.h  Octree.cpp  Octree.h  README.md  Types.h  conanfile.txt  main.cpp  main.cu
assets/: armadillo2.npz
cmake/: FindCNPY.cmake
shaders/: default_lit.frag  octree.frag  octree.vert  tri_mesh_ssbo.vert  tri_mesh_ssbo.vert.spv
